--- a/template.phtml
+++ b/template.phtml
@@ -47,7 +47,7 @@
     <label for="sex">Стать:</label>
     <input type="text" id="sex" name="sex">
     <label for="bYear">Рік народження:</label>
-    <input type="text" id="bYear" name="bYear">
+    <input type="number" id="bYear" name="bYear">
     <label for="Education">Освіта:</label>
     <input type="text" id="Education" name="Education">
     <label for="spec">Спеціалізація:</label>
